typescript/checker/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration1.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            94,
        ),
        hi: BytePos(
            95,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration1.ts:2:19
  |
2 |         var selection = a, 
  |                         ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            113,
        ),
        hi: BytePos(
            114,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration1.ts:3:15
  |
3 |             position = b,
  |                        ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            128,
        ),
        hi: BytePos(
            129,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration1.ts:4:12
  |
4 |             model = c,
  |                     ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            145,
        ),
        hi: BytePos(
            146,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration1.ts:5:14
  |
5 |             support = d;
  |                       ^

